# UniversityRecords

./: .gitignore  CMakeLists.txt  README.md  UniversityRecords.slnx  docker-compose.yml  todo
.VSCodeCounter/2026-03-21_12-49-32/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
UniversityRecords/: UniversityRecords.vcxproj  UniversityRecords.vcxproj.filters  common.h  main.cpp  main.h  members.h  professor.h  student.cpp  student.h
src/: main.cpp  main.h
src/admin/: admin.cpp  admin.h
src/common/: common.cpp  common.h
src/crypt/: hashpasswd.cpp  hashpasswd.h
src/database/: database.cpp  database.h
src/loginMenu/: logIn.cpp  logIn.h
src/members/: members.cpp  members.h
src/professor/: professor.cpp  professor.h
src/student/: student.cpp  student.h
